--- a/pagina4.html
+++ b/pagina4.html
@@ -98,8 +98,8 @@
     <div class="content">
         <h1>Planos Para Viagem</h1> 
         <img src="constru.png" style="max-width: 80%; height: auto; margin-top: 10px; display: block; margin-left: auto; margin-right: auto;"> <!-- Escala reduzida -->
-        <p>Essa página ainda está como nosso, relacionamento e o nosso futuro. Em construção.</p>
-        <p>Mas seria de grande ajuda se pudesse clicar no link e responder um rápido questionário.</p>
+        <p>Essa página ainda está como nosso relacionamento e como o nosso futuro. Em construção.</p>
+        <p>Mas seria de grande ajuda se pudesse clicar no link e responder um rápido questionário:</p>
         <a href="https://forms.gle/biGfNytYxJNfDLdC9" style="font-size: 24px; color: #bf4ed6; text-decoration: none; margin-top: 20px; display: block; text-align: center;">
             Clique aqui para responder um rápido questionário
         </a>
