--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lais💖</title>
+    <!-- Adicionando Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Poppins', sans-serif; /* Fonte modernizada */
             background-color: #ffe4e1;
             margin: 0;
             padding: 0;
-            overflow-x: hidden; /* Remove barra de rolagem horizontal */
         }
         nav {
             background-color: #ff69b4;
-            padding: 20px;
+            padding: 10px;
             text-align: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -24,16 +25,16 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            flex-wrap: wrap; /* Adiciona flex wrap para prevenir overflow */
+            flex-wrap: wrap; /* Flexível para mobile */
         }
         nav ul li {
-            margin: 0 10px; /* Reduzi a margem para evitar overflow */
+            margin: 5px;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-size: 20px;
-            padding: 10px 20px;
+            font-size: 18px;
+            padding: 8px 15px;
             background-color: #ff1493;
             border-radius: 10px;
             transition: background-color 0.3s;
@@ -48,33 +49,27 @@
         }
         .content {
             text-align: center;
-            padding: 50px;
+            padding: 20px;
         }
         .content h1 {
-            font-size: 50px;
+            font-size: 32px;
             color: #ff1493;
+            margin: 20px 0;
         }
         .content p {
-            font-size: 24px;
+            font-size: 16px;
             color: #ff69b4;
+            margin: 10px 0;
         }
-        .content {
-         text-align: center; /* Garante que todo o texto dentro do .content esteja centralizado */
-         padding: 50px;
-        }
-
         .content h3 {
-        font-size: 22px;
-        color: #ff69b4;
-        line-height: 0.8; /* Ajuste da distância entre as linhas */
-        white-space: pre-wrap; /* Mantém as quebras de linha */
-        margin-top: 30px;
-        margin-bottom: 0; /* Remove a margem inferior se necessário */
+            font-size: 18px;
+            color: #ff69b4;
+            white-space: pre-wrap;
+            margin: 20px 0;
         }
-
         .heart {
             color: #ff1493;
-            font-size: 100px;
+            font-size: 80px;
             animation: beat 1s infinite;
         }
         @keyframes beat {
@@ -89,10 +84,47 @@
             background-color: #ff69b4;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
             color: white;
+            position: fixed; /* Torna o rodapé fixo */
+            bottom: 0; /* Posiciona na parte inferior */
+            width: 100%; /* Garante que ocupe toda a largura da tela */
+            z-index: 100; /* Certifica-se de que o rodapé ficará sobre outros elementos */
+        }
+        /* Responsividade */
+        @media (max-width: 768px) {
+            nav ul li a {
+                font-size: 16px;
+                padding: 6px 10px;
+            }
+            .content h1 {
+                font-size: 24px;
+            }
+            .content h3 {
+                font-size: 16px;
+            }
+            .content p {
+                font-size: 14px;
+            }
+            .heart {
+                font-size: 60px;
+            }
+        }
+        @media (max-width: 480px) {
+            nav ul {
+                flex-direction: column; /* Empilha os itens no mobile */
+            }
+            .content h1 {
+                font-size: 20px;
+            }
+            .content h3 {
+                font-size: 14px;
+            }
+            .content p {
+                font-size: 12px;
+            }
+            .heart {
+                font-size: 50px;
+            }
         }
     </style>
 </head>
@@ -103,7 +135,7 @@
             <li><a href="index.html" class="active">Início</a></li>
             <li><a href="pagina2.html">Princesa</a></li>
             <li><a href="pagina3.html">A Melhor Playlist</a></li>
-            <li><a href="pagina4.html">Planos Para Viagem</a></li>
+            <li><a href="pagina4.html">Nossos Planos</a></li>
         </ul>
     </nav>
 
