--- a/pagina4.html
+++ b/pagina4.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lais💖</title>
+    <!-- Importando a fonte Poppins do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Poppins', sans-serif; /* Fonte modernizada */
             background-color: #ffe4e1;
             margin: 0;
             padding: 0;
-            overflow-x: hidden; /* Remove barra de rolagem horizontal */
+            overflow-x: hidden;
             font-size: 18px; /* Tamanho padrão do texto */
         }
         nav {
             background-color: #ff69b4;
-            padding: 20px;
+            padding: 10px;
             text-align: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -25,16 +27,16 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            flex-wrap: wrap; /* Adiciona flex wrap para prevenir overflow */
+            flex-wrap: wrap; /* Flexível para mobile */
         }
         nav ul li {
-            margin: 0 10px; /* Reduzi a margem para evitar overflow */
+            margin: 5px;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-size: 20px;
-            padding: 10px 20px;
+            font-size: 18px;
+            padding: 8px 15px;
             background-color: #ff1493;
             border-radius: 10px;
             transition: background-color 0.3s;
@@ -49,21 +51,41 @@
         }
         .content {
             text-align: center;
-            padding: 30px; /* Reduzi o padding para deixar mais uniforme */
+            padding: 20px;
         }
         .content h1 {
-            font-size: 36px; /* Tamanho do título ajustado */
+            font-size: 28px; /* Tamanho do título ajustado */
             color: #ff1493;
+            margin-bottom: 20px;
         }
         .content p {
-            font-size: 18px; /* Tamanho do parágrafo ajustado */
+            font-size: 16px; /* Tamanho do parágrafo ajustado */
             color: #ff69b4;
-            margin: 10px 0; /* Adicionei margem para espaçamento entre parágrafos */
+            margin: 10px 0; /* Espaçamento entre parágrafos */
+        }
+        .content img {
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 100%;
+            height: auto;
+            margin: 20px auto;
+            display: block;
         }
         .heart {
             color: #ff1493;
-            font-size: 80px; /* Tamanho do coração ajustado */
+            font-size: 60px; /* Tamanho do coração ajustado */
             animation: beat 1s infinite;
+            margin-top: 20px;
+        }
+        footer {
+            background-color: #ff69b4;
+            text-align: center;
+            padding: 10px;
+            color: white;
+            position: fixed; /* Torna o rodapé fixo */
+            bottom: 0; /* Posiciona na parte inferior */
+            width: 100%; /* Garante que ocupe toda a largura da tela */
+            z-index: 100; /* Certifica-se de que o rodapé ficará sobre outros elementos */
         }
         @keyframes beat {
             0%, 100% {
@@ -73,14 +95,29 @@
                 transform: scale(1.1);
             }
         }
-        footer {
-            background-color: #ff69b4;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-            color: white;
+        /* Responsividade */
+        @media (max-width: 768px) {
+            nav ul li a {
+                font-size: 16px;
+                padding: 6px 10px;
+            }
+            .content h1 {
+                font-size: 24px;
+            }
+            .heart {
+                font-size: 50px;
+            }
+        }
+        @media (max-width: 480px) {
+            nav ul {
+                flex-direction: column; /* Empilha os itens no mobile */
+            }
+            .content h1 {
+                font-size: 20px;
+            }
+            .heart {
+                font-size: 40px;
+            }
         }
     </style>
 </head>
@@ -91,18 +128,18 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="pagina2.html">Princesa</a></li>
             <li><a href="pagina3.html">A Melhor Playlist</a></li>
-            <li><a href="pagina4.html" class="active">Planos Para Viagem</a></li>
+            <li><a href="pagina4.html" class="active">Nossos Planos</a></li>
         </ul>
     </nav>
 
     <div class="content">
-        <h1>Planos Para Viagem</h1> 
-        <img src="constru.png" style="max-width: 80%; height: auto; margin-top: 10px; display: block; margin-left: auto; margin-right: auto;"> <!-- Escala reduzida -->
+        <h1>Página em construção</h1> 
+        <img src="constru.png" alt="Página em construção">
         <p>Essa página ainda está como nosso relacionamento e como o nosso futuro. Em construção.</p>
-        <p>Mas seria de grande ajuda se pudesse clicar no link e responder um rápido questionário:</p>
-        <a href="https://forms.gle/biGfNytYxJNfDLdC9" style="font-size: 24px; color: #bf4ed6; text-decoration: none; margin-top: 20px; display: block; text-align: center;">
-            Clique aqui para responder um rápido questionário
-        </a>
+        <p>Futuramente essa página será dedicada exclusivamente para colocarmos fotos nossas, eu irei criar um álbum na estilização de página para a gente.</p>
+        <p>Mas venho pensando em algumas funcionalidades a mais para esse site que posso implementar futuramente, ainda não, mas irá ter...</p>
+        <p>Venho pensando em um tipo diferente de date enquanto estiver aqui no Brasil. Não irei mais pagar uma viagem para a gente, mas pensei em algo melhor no qual possamos fazer.</p>
+        <p>Veremos se daria certo ou não, mas vale dizer, será em Uberlândia mesmo, não se preocupe.</p>
         <p class="heart">❤</p>
     </div>
 
